<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_visitor_info"
            android:icon="@mipmap/ic_visitor_info"
            android:title="@string/menu_visitor_info" />
    </group>

    <item  android:title="تنظیمات">
        <menu >
            <item
                android:id="@+id/nav_app_info"
                android:icon="@mipmap/ic_app"
                android:title="@string/menu_app_info" />
            <item
                android:id="@+id/nav_device_info"
                android:icon="@mipmap/ic_device_info"
                android:title="@string/menu_device_info" />
            <item
                android:id="@+id/nav_update_app"
                android:icon="@mipmap/ic_update"
                android:title="@string/menu_update_app" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@mipmap/ic_setting"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
