<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="smart.visitor.ir.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_visitor_info"
        android:name="smart.visitor.ir.ui.VisitorInfo.VisitorInfoFragment"
        android:label="@string/menu_visitor_info"
        tools:layout="@layout/fragment_visitor_info" />

    <fragment
        android:id="@+id/nav_device_info"
        android:name="smart.visitor.ir.ui.DeviceInfo.DeviceInfoFragment"
        android:label="@string/menu_device_info"
        tools:layout="@layout/fragment_device_info" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="smart.visitor.ir.ui.Tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_app_info"
        android:name="smart.visitor.ir.ui.AppInfo.AppInfoFragment"
        android:label="@string/menu_app_info"
        tools:layout="@layout/fragment_app_info" />

    <fragment
        android:id="@+id/nav_update_app"
        android:name="smart.visitor.ir.ui.UpdateApp.UpdateAppFragment"
        android:label="@string/menu_update_app"
        tools:layout="@layout/fragment_update_app" />
</navigation>