<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/tv_221"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/iransansmobile"
        android:text="@string/CustomerInThePath"
        app:layout_constraintBottom_toBottomOf="@+id/tv_PathCount"
        app:layout_constraintEnd_toStartOf="@+id/tv_PathCount"
        app:layout_constraintTop_toTopOf="@+id/tv_PathCount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/iransansmobile"
        android:text="@string/Count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Img_Customer_Logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_PathName" />


    <TextView
        android:id="@+id/tv_PathName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/iransansmobile"
        android:text="PathName"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toStartOf="@+id/tv_PathName2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PathName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/iransansmobile"
        android:text="@string/Path"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toStartOf="@+id/Img_Customer_Logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PathCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/iransansmobile"
        android:text="000"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/tv_count"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/Img_Customer_Logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/path2" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Tv_CustomerName"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
