<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".Activity.PaymentTypeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/Img_Customer_Logo2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:tint="@color/secondary_text"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/customer1" />

                <TextView
                    android:id="@+id/tv_CustomerName"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="Name"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_CustomerDetail"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="Detail"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/material_text_body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_CustomerName" />

                <TextView
                    android:id="@+id/tv_Calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="Date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_CustomerDetail" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?selectableItemBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_OrderType"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/cercle_background_blue"
                        android:padding="5dp"
                        android:tint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_order2" />

                    <TextView
                        android:id="@+id/tv_Payment2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/iransansmobile"
                        android:gravity="center"
                        android:text="@string/OrderType"
                        android:textSize="@dimen/material_text_body1"
                        app:layout_constraintBottom_toTopOf="@+id/segmented_OrderType"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_OrderType" />

                    <info.hoang8f.android.segmented.SegmentedGroup
                        android:id="@+id/segmented_OrderType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:sc_border_width="2dp"
                        app:sc_corner_radius="5dp"
                        app:sc_tint_color="@color/primary">
                        <RadioButton
                            android:id="@+id/rb_Other"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:text="@string/OtherItem" />

                        <RadioButton
                            android:id="@+id/rb_Sale"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/Sale" />

                        <RadioButton
                            android:id="@+id/rb_NotSale"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/Returned" />



                    </info.hoang8f.android.segmented.SegmentedGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?selectableItemBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_PaymentType"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/cercle_background_orange"
                        android:padding="5dp"
                        android:tint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_payment3" />

                    <TextView
                        android:id="@+id/tv_Payment1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/iransansmobile"
                        android:gravity="center"
                        android:text="@string/PaymentType"
                        android:textSize="@dimen/material_text_body1"
                        app:layout_constraintBottom_toTopOf="@+id/segmented_Payment"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_PaymentType" />

                    <info.hoang8f.android.segmented.SegmentedGroup
                        android:id="@+id/segmented_Payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:sc_border_width="2dp"
                        app:sc_corner_radius="5dp"
                        app:sc_tint_color="@color/primary">

                        <RadioButton
                            android:id="@+id/rb_PayTrust"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/trust" />

                        <RadioButton
                            android:id="@+id/rb_PayCash"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/Cash" />

                        <RadioButton
                            android:id="@+id/rb_PayCheque"
                            style="@style/MyRadioButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/Cheque" />


                    </info.hoang8f.android.segmented.SegmentedGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/BottomSheetBasketPriceDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="120dp"
        app:behavior_hideable="false"
        android:orientation="vertical"
        android:background="@color/Transparent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <fragment
            android:id="@+id/fragmentContainerBasket"
            android:name="smart.visitor.ir.ui.Basket.BasketRlsFragment"
            tools:layout="@layout/fragment_basket_rls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/BottomSheetContinueBasket2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="100dp"
        app:behavior_hideable="false"
        android:orientation="vertical"
        android:background="@color/Transparent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <com.omega_r.libs.OmegaCenterIconButton
            style="@style/MyButton"
            android:id="@+id/Btn_FinalConfirm"
            android:drawableLeft="@mipmap/ic_check4"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/accent"
            android:text="@string/FinalConfirm" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

