<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.Basket.BasketRlsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Transparent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_default"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/tv_TaxRls"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_Tax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_Tax" />

            <TextView
                android:id="@+id/tv_DiscountRls"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_Discount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_Discount" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/TotalSum"
                android:textStyle="bold"
                android:textSize="@dimen/material_text_subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_totalRls"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textStyle="bold"
                android:textSize="@dimen/material_text_subhead"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_Sum"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Sum"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_SumRls"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_Sum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_Sum" />

            <TextView
                android:id="@+id/tv_Discount"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Discount"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Sum" />

            <TextView
                android:id="@+id/tv_Tax"
                style="@style/TvBasketRls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="64dp"
                android:text="@string/Tax"
                android:textSize="@dimen/material_text_body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Discount" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:src="@mipmap/ic_brows"
            android:tint="@color/divider"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>